--- a/css/reservia.css
+++ b/css/reservia.css
@@ -351,7 +351,7 @@ p label {
 .picture_hosting_1 {
   border: 4px solid white;
   border-radius: 20px;
-  background-image: url("../images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg");
+  background: url("../images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg");
   background-size: 105%;
   background-position: bottom 60px right 0;
 }
@@ -359,7 +359,7 @@ p label {
 .picture_hosting_2 {
   border: 4px solid white;
   border-radius: 20px;
-  background-image: url("../images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg");
+  background: url("../images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg");
   background-size: 105%;
   background-position: bottom 60px right 0;
 }
@@ -367,7 +367,7 @@ p label {
 .picture_hosting_3 {
   border: 4px solid white;
   border-radius: 20px;
-  background-image: url("../images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg");
+  background: url("../images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg");
   background-size: 105%;
   background-position: bottom 60px right 0;
 }
@@ -375,7 +375,7 @@ p label {
 .picture_hosting_4 {
   border: 4px solid white;
   border-radius: 20px;
-  background-image: url("../images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg");
+  background: url("../images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg");
   background-size: 105%;
   background-position: bottom 25px right 0;
 }
@@ -383,7 +383,7 @@ p label {
 .picture_hosting_5 {
   border: 4px solid white;
   border-radius: 20px;
-  background-image: url("../images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg");
+  background: url("../images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg");
   background-size: 105%;
   background-position: bottom 65px right 0;
 }
@@ -391,7 +391,7 @@ p label {
 .picture_hosting_6 {
   border: 4px solid white;
   border-radius: 20px;
-  background-image: url("../images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg");
+  background: url("../images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg");
   background-size: 105%;
   background-position: bottom 330px right 0;
 }
@@ -483,7 +483,7 @@ p label {
 }
 
 .picture_most_popular1 {
-  background-image: url(../images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg);
+  background: url(../images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg);
   background-size: 60%;
   background-position: bottom 0 right 180px;
   width: -webkit-fill-available;
@@ -495,7 +495,7 @@ p label {
 }
 
 .picture_most_popular2 {
-  background-image: url(../images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg);
+  background: url(../images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg);
   background-size: 60%;
   background-position: bottom 150px right 170px;
   width: -webkit-fill-available;
@@ -507,7 +507,7 @@ p label {
 }
 
 .picture_most_popular3 {
-  background-image: url(../images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg);
+  background: url(../images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg);
   background-size: 40%;
   background-position: bottom -30px right 220px;
   width: -webkit-fill-available;
@@ -569,7 +569,7 @@ p label {
 }
 
 .picture1 {
-  background-image: url(../images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg);
+  background: url(../images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg);
   background-size: 220%;
   background-position: bottom 45px left 480px;
   border-radius: 20px;
@@ -587,7 +587,7 @@ p label {
   margin-right: 52px;
 }
 .picture2 {
-  background-image: url(../images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg);
+  background: url(../images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg);
   background-size: 105%;
   background-position: bottom 360px right 0;
   height: 238px;
@@ -597,7 +597,7 @@ p label {
 }
 
 .picture3 {
-  background-image: url(../images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg);
+  background: url(../images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg);
   background-size: 105%;
   background-position: top -30px right 0;
   margin: 40px 0 0 0;
@@ -608,7 +608,7 @@ p label {
 }
 
 .picture4 {
-  background-image: url(../images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg);
+  background: url(../images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg);
   background-size: 240%;
   background-position: bottom 0 right 520px;
   width: 302px;
@@ -626,7 +626,7 @@ p label {
 }
 
 .picture5 {
-  background-image: url(../images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg);
+  background: url(../images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg);
   background-size: 100%;
   background-position: bottom 5px right 0;
   height: 195px;
@@ -636,7 +636,7 @@ p label {
 }
 
 .picture6 {
-  background-image: url(../images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg);
+  background: url(../images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg);
   background-size: 105%;
   background-position: bottom 0 right 0;
   margin-top: 40px;
