--- a/css/small-device.css
+++ b/css/small-device.css
@@ -2,7 +2,6 @@
   /*header*/
 
   header {
-    display: flex;
     flex-direction: column;
   }
 
@@ -12,7 +11,6 @@
 
   nav {
     border-bottom: 3px solid #f2f2f2;
-    width: auto;
     margin: 0;
   }
 
@@ -56,7 +54,6 @@
     right: 10px;
     font-weight: 600;
     border: none;
-    padding: 0;
   }
 
   /*section*/
@@ -66,7 +63,6 @@
   .section_title h1 {
     width: 315px;
     margin-left: 20px;
-    font-size: 1.4em;
   }
 
   .section_sub-title span {
@@ -81,13 +77,11 @@
 
   .logo_location {
     margin: 0;
-    height: 18px;
   }
 
   .input {
     width: -webkit-fill-available;
     max-width: 270px;
-    height: 50px;
     border: 1px solid #f2f2f2;
   }
 
@@ -106,7 +100,6 @@
   .logo_search {
     display: flex;
     padding: 18px 18px 16px 18px;
-    align-items: center;
     border: 1px solid #0065fc;
     color: white;
     background-color: #0065fc;
@@ -116,27 +109,23 @@
   /*Filters*/
 
   .filters {
-    margin: 30px 0 0 0;
-    width: 375px;
+    margin: 20px 0 0 0;
     flex-direction: column;
     outline: none;
   }
 
   .filters h1 {
-    position: absolute;
-    left: 20px;
-    top: 360px;
+    margin: 0 0 0 20px;
   }
 
   .contains_economic {
-    margin: 30px 0 0 20px;
+    margin: 20px 0 0 20px;
   }
 
   .economic {
     width: -webkit-fill-available;
     max-width: 155px;
     padding: 0 0 0 52px;
-    font-weight: 600;
     font-size: 0.68em;
   }
 
@@ -149,7 +138,6 @@
   .family {
     width: -webkit-fill-available;
     max-width: 126px;
-    font-weight: 600;
     font-size: 0.68em;
   }
 
@@ -161,7 +149,6 @@
     width: -webkit-fill-available;
     max-width: 150px;
     padding: 0 0 0 52px;
-    font-weight: 600;
     font-size: 0.68em;
   }
 
@@ -173,7 +160,6 @@
     width: -webkit-fill-available;
     max-width: 200px;
     padding: 0 0 0 52px;
-    font-weight: 600;
     font-size: 0.68em;
   }
 
@@ -187,8 +173,7 @@
   /*informations*/
 
   .informations {
-    height: 50px;
-    margin: 20px 20px 15px 20px;
+    margin: 10px 20px 15px 20px;
   }
 
   /*section*/
@@ -201,15 +186,19 @@
   /*most popular*/
 
   .most_popular {
-    display: none;
     width: auto;
     margin: 0;
-    padding: 0 20px 0 20px;
+    padding: 0 0 0 20px;
     border-radius: 0;
   }
 
+  .contains_picture_most_popular {
+    padding: 0;
+    margin-right: 20px;
+  }
+
   .header_most_popular {
-    justify-content: space-between;
+    margin-right: 20px;
   }
 
   .header_most_popular h1 {
@@ -226,22 +215,11 @@
     margin-bottom: 10px;
   }
 
-  .description_picture_most_popular1 {
-    width: -webkit-fill-available;
-  }
-
-  .description_picture_most_popular2 {
-    width: -webkit-fill-available;
-  }
-
-  .description_picture_most_popular3 {
-    width: -webkit-fill-available;
-  }
-
   /*hosting*/
 
   .section_hosting {
     margin: 0;
+    flex-direction: column-reverse;
   }
 
   .contains_hosting {
@@ -270,102 +248,64 @@
   }
 
   .picture_hosting_1 {
-    height: 200px;
     margin: 0 0 12px 0;
-    border-radius: 20px;
     box-shadow: 0px 0px 10px #d9d9d9;
-    background-position: bottom 23px right -6px;
   }
 
   .picture_hosting_2 {
-    height: 200px;
-    margin-bottom: 12px;
-    border-radius: 20px;
+    margin: 0 0 12px 0;
     box-shadow: 0px 0px 10px #d9d9d9;
-    background-position: bottom 23px right -6px;
   }
 
   .picture_hosting_3 {
-    height: 200px;
-    margin-bottom: 12px;
-    border-radius: 20px;
+    margin: 0 0 12px 0;
     box-shadow: 0px 0px 10px #d9d9d9;
-    background-position: bottom 26px right -12px;
   }
 
   .picture_hosting_4 {
-    height: 200px;
-    margin-bottom: 12px;
-    border-radius: 20px;
+    margin: 0 0 12px 0;
     box-shadow: 0px 0px 10px #d9d9d9;
-    background-position: bottom 302px right -6px;
   }
 
   .picture_hosting_5 {
-    height: 200px;
-    margin-bottom: 12px;
-    border-radius: 20px;
+    margin: 0 0 12px 0;
     box-shadow: 0px 0px 10px #d9d9d9;
-    background-position: bottom 45px right -6px;
   }
 
   .picture_hosting_6 {
-    height: 200px;
-    border-radius: 20px;
+    margin: 0 0 30px 0;
     box-shadow: 0px 0px 10px #d9d9d9;
-    background-position: bottom 406px right -6px;
-    margin-bottom: 30px;
   }
 
   .description_picture1 {
-    background-size: cover;
-    background-color: white;
-    border-radius: 0 0 15px 15px;
     padding-left: 15px;
   }
 
   .description_picture2 {
-    background-size: cover;
-    background-color: white;
-    border-radius: 0 0 15px 15px;
     padding-left: 15px;
   }
 
   .description_picture3 {
-    background-size: cover;
-    background-color: white;
-    border-radius: 0 0 15px 15px;
     padding-left: 15px;
   }
 
   .description_picture4 {
-    background-size: cover;
-    background-color: white;
-    border-radius: 0 0 15px 15px;
     padding-left: 15px;
   }
 
   .description_picture5 {
-    background-size: cover;
-    background-color: white;
-    border-radius: 0 0 15px 15px;
     padding-left: 15px;
   }
 
   .description_picture6 {
-    background-size: cover;
-    background-color: white;
-    border-radius: 0 0 15px 15px;
     padding-left: 15px;
   }
 
   .contain_description_picture_top {
-    width: auto;
     margin: 115px -2px -2px -4px;
   }
 
   .contain_description_picture_bottom {
-    width: auto;
     margin: 115px -2px -2px -4px;
   }
 
@@ -394,7 +334,6 @@
   }
 
   .picture1 h2 {
-    width: auto;
     margin-top: 132px;
   }
 
@@ -409,7 +348,6 @@
   }
 
   .picture2 h2 {
-    width: auto;
     margin-top: 132px;
   }
 
@@ -419,7 +357,6 @@
   }
 
   .picture3 h2 {
-    width: auto;
     margin-top: 132px;
   }
 
@@ -430,7 +367,6 @@
   }
 
   .picture4 h2 {
-    width: auto;
     margin-top: 132px;
   }
 
@@ -445,7 +381,6 @@
   }
 
   .picture5 h2 {
-    width: auto;
     margin-top: 132px;
   }
 
@@ -455,7 +390,6 @@
   }
 
   .picture6 h2 {
-    width: auto;
     margin-top: 132px;
   }
 
@@ -463,7 +397,6 @@
 
   footer {
     margin: 0;
-    width: auto;
     height: 460px;
     flex-direction: column;
     padding-left: 30px;
